updated help and index

--- a/Metee's Project/index.html
+++ b/Metee's Project/index.html
@@ -13,7 +13,21 @@
           width:auto;
           height:60px;
       }
-      
+      .jumbotron {
+        height: 50em;
+            display: flex;
+            margin-bottom: 1em;
+            align-items:center ;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-image: url("./images/pexels-vie-studio-7006256.jpg");
+      }
+
+      body {
+        /* background-image: url("./images/opening.jpeg"); */
+        /* background-repeat: no-repeat; */
+        height: 500px;
+      }
   </style>
 </head>
 <body>
@@ -52,7 +66,12 @@
     </div>
   </nav>
 
-
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <p class="display-4 fw-bold text-dark"> Introduction to Bipolarity Disorder</p>
+      <p class="lead fw-bold text-dark fs-4">Learn more about this condition here</p>
+    </div>
+  </div>
 
 
    <!-- JavaScript Bundle with Popper -->
