--- a/Metee's Project/help.html
+++ b/Metee's Project/help.html
@@ -41,6 +41,7 @@
        
         body{
             background-image: url("images/psychologist-consulting-patient_464314-1264.webp");
+            /* background-repeat: no-repeat; */
         }
     
         .img-size {
@@ -73,7 +74,7 @@
     <div class="group">
         <h2 class="TheLionMind">3.The Lion Mind</h2>
         <p>Local- General number:(+65) 1800-221 4444</p>
-        <a href="https://thelionmind.org.sg/" > <button>Click here</button>
+        <a href="https://thelionmind.org.sg/" > <button>Click here</button> </a>
         <h4 id="r" class="SeekHelp"> Where do I seek help?</h4>
         <p>Institute of mental health-Tel: 6389 2000</p>
          </div> 
