--- a/Metee's Project/help.html
+++ b/Metee's Project/help.html
@@ -112,16 +112,17 @@
 <div class="container info">
     <h1 id="r" class="resource"> ~Where to get help?~</h1>
     <div class="group">
-        <h2 class="MayoClinic">1.Mayo Clinic</h2>
-        <p>General number:480-301-8000</p>
+        <h2 class="MayoClinic fw-bold">1.Mayo Clinic</h2>
+        <!-- <p>Mayo Clinic's a non-profit org that commits to clinical practice, education and research, providing expert care to everyone.</p> -->
+        <p class="fw-bold">General number: 480-301-8000</p>
         <a href="https://www.mayoclinic.org/diseases-conditions/bipolar-disorder/diagnosis-treatment/drc-20355961" > <button>Click here</button> </a> 
     </div>
 
     <br>
 
     <div class="group">
-        <h2 class="HelpGuide">2.Help Guide</h2>
-        <p>Find them at: <a href="https://www.facebook.com/helpguideorg/" > <img class="img-size" src="images/Facebook_f_logo_(2021).svg.webp" class="img-size"> <a href="https://twitter.com/helpguideorg" > <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.jpg" class="img-size"></p> </a>
+        <h2 class="HelpGuide fw-bold">2.Help Guide</h2>
+        <p class="fw-bold">Find them at: <a href="https://www.facebook.com/helpguideorg/" > <img class="img-size" src="images/Facebook_f_logo_(2021).svg.webp" class="img-size"> <a href="https://twitter.com/helpguideorg" > <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.jpg" class="img-size"></p> </a>
        
         <a href="https://www.helpguide.org/articles/bipolar-disorder/helping-someone-with-bipolar-disorder.htm" > <button>Click here</button> </a>
     </div>
@@ -129,11 +130,15 @@
     <br>
 
     <div class="group">
-        <h2 class="TheLionMind">3.The Lion Mind</h2>
-        <p>Local- General number:(+65) 1800-221 4444</p>
+        <h2 class="TheLionMind fw-bold">3.The Lion Mind</h2>
+        <p class="fw-bold">Local- General number:(+65) 1800-221 4444</p>
         <a href="https://thelionmind.org.sg/" > <button>Click here</button> </a>
+
+        <br>
+        <br>
+        
         <h4 id="r" class="SeekHelp"> Where do I seek help?</h4>
-        <p>Institute of mental health-Tel: 6389 2000</p>
+        <p class="fw-bold">Institute of Mental Health (IMH) Tel: 6389 2000</p>
          </div> 
 
     </div>
