--- a/Metee's Project/index.html
+++ b/Metee's Project/index.html
@@ -43,6 +43,9 @@
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="info.html">Info</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="help.html">Help</a>
           </li>
           <li class="nav-item dropdown">
@@ -53,7 +56,7 @@
               <li><a class="dropdown-item" href="info.html#bp1">Bipolar I</a></li>
               <li><a class="dropdown-item" href="#">Bipolar II</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+             
             </ul>
           </li>
           
