--- a/Metee's Project/help.html
+++ b/Metee's Project/help.html
@@ -78,6 +78,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="info.html">Info</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="help.html">Help</a>
           </li>
           <li class="nav-item dropdown">
