--- a/help.html
+++ b/help.html
@@ -78,6 +78,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="info.html">Info</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="help.html">Help</a>
           </li>
           <li class="nav-item dropdown">
@@ -88,7 +91,7 @@
               <li><a class="dropdown-item" href="info.html#bp1">Bipolar I</a></li>
               <li><a class="dropdown-item" href="#">Bipolar II</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="info.html">Something else here</a></li>
+        
             </ul>
           </li>
           
