--- a/help.html
+++ b/help.html
@@ -85,7 +85,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="info.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Info
+              Types of Bipolar
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="info.html#bp1">Bipolar I</a></li>
